# refmt

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: create.bash
ci/: before_deploy.bash  before_deploy.sh  script.bash  script.sh
ci/github-actions/: macos-install-packages  ubuntu-install-packages
refmt-serde/: Cargo.toml
refmt-serde/src/: lib.rs
refmt-serde/src/serde/: json.rs  mod.rs  toml.rs  yaml.rs
src/: assets.rs  errors.rs  format.rs  lib.rs  main.rs  translator.rs
src/format/: format.rs  json.rs  toml.rs  yaml.rs
src/translator/: json.rs  toml.rs  translator.rs  yaml.rs
