[package]
name = "refmt"
version = "0.2.2"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "yoshihitoh/refmt" }

[[bin]]
name = "refmt"
path = "src/bin/refmt/main.rs"

[[bin]]
name = "refmt-generate-assets"
path = "src/bin/generate_assets/main.rs"

[dependencies]
ansi_term = "0.11"
atty = "0.2"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_yaml = "0.8"
strum = "0.15"
strum_macros = "0.15"
toml = "0.5"

[dependencies.clap ]
version = "2.32"
features = ["suggestions", "color", "wrap_help"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.syntect]
version = "3.2"
default_features = false
features = ["parsing", "yaml-load", "dump-load", "dump-create"]

[dev-dependencies]
serde_derive = "1.0"
