[package]
name = "refmt"
version = "0.2.2"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "yoshihitoh/refmt" }

[[bin]]
name = "refmt"
path = "src/bin/refmt/main.rs"

[[bin]]
name = "refmt-generate-assets"
path = "src/bin/generate_assets/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
atty = "0.2"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
strum = "0.18"
strum_macros = "0.19"
thiserror = "1"
toml = "0.5"

[dependencies.clap ]
version = "2.32"
features = ["suggestions", "color", "wrap_help"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.syntect]
version = "4.2"
default_features = false
features = ["parsing", "yaml-load", "dump-load", "dump-create", "regex-onig"]
