[package]
name = "refmt"
version = "0.2.2"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2021"

[badges]
travis-ci = { repository = "yoshihitoh/refmt" }

[workspace]
members = [
    "refmt-serde",
]

[[bin]]
name = "refmt"
path = "src/bin/refmt/main.rs"

[[bin]]
name = "refmt-generate-assets"
path = "src/bin/generate_assets/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
atty = "0.2"
env_logger = "0.10"
log = "0.4"
refmt-serde = { version = "0.3.0", path = "./refmt-serde"}
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"

[dependencies.clap ]
version = "2.32"
features = ["suggestions", "color", "wrap_help"]

[dependencies.syntect]
version = "4.7"
default_features = false
features = ["parsing", "yaml-load", "dump-load", "dump-create", "regex-onig"]
