[package]
name = "refmt-serde"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }

[dev-dependencies]
once_cell = "1.17"
